Bug 903758 - Media Recording - setting the recorder state to inActive on the stop method. r=roc