content/media/MediaRecorder.cpp
@@ -228,6 +228,7 @@ MediaRecorder::Stop(ErrorResult& aResult)
     aResult.Throw(NS_ERROR_DOM_INVALID_STATE_ERR);
     return;
   }
+  mState = RecordingState::Inactive;
   mTrackUnionStream->RemoveListener(mEncoder);
 }
 
